# bias_site

./: .env.example  .gitignore  Dockerfile  README.md  bias_core-0.1.0-py3-none-any.whl  bias_core-0.1.1-py3-none-any.whl  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
bias_site.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/: entrypoint.sh
docs/: bias-extension-development-after-split.md  bias-independent-package-architecture.md  bias-new-project-split-development-plan.md
docs/developer/: admin-page-registration.md  event-subscriptions.md  extension-api.md  extension-system-roadmap.md  frontend-injection-points.md  module-development.md  permission-registration.md  platform-delivery.md  resource-fields.md
extensions/fixture_theme/: extension.json
extensions/fixture_theme/assets/: theme.css
extensions/fixture_theme/backend/: ext.py
frontend/: admin.html  extensionImportMapPlugin.mjs  extensionSdkAliases.mjs  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/scripts/: checkSdkPackage.mjs  syncExtensionSources.mjs  syncSdkAliases.mjs  syncSdkPackageSources.mjs
frontend/sdk-package/: admin.d.ts  admin.js  common.d.ts  common.js  components-admin-node.js  components-admin.d.ts  components-admin.js  forum-node.js  forum.d.ts  forum.js  package.json
frontend/src/: App.vue  main.js
scripts/: docker-install.sh  docker-upgrade.sh  ensure-secrets.ps1  ensure-secrets.py  prepare-extension-frontend-dist.ps1  validate-workspace.ps1
(+178 files in other folders)
